// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should not render autofly on load when the experiment bucket is "control" or null 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <div
    className="presence-avatar-container"
    onKeyDown={[Function]}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="1"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              e
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Previewed {timeAgo}"
                id="boxui.presence.timeSinceLastPreviewed"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="1"
        isActive={false}
        name="e"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="2"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              d
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Edited {timeAgo}"
                id="boxui.presence.timeSinceLastModified"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="2"
        isActive={false}
        name="d"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="3"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              c
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Commented {timeAgo}"
                id="boxui.presence.timeSinceLastCommented"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="3"
        isActive={false}
        name="c"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <div
      className="presence-avatar avatar presence-count"
      tabIndex="0"
    >
      +2
    </div>
  </div>
  <Overlay
    className="presence-dropdown-container presence-autofly"
    shouldDefaultFocus={false}
  >
    <PresenceDropdown
      className="presence-dropdown"
      collaborators={
        Array [
          Object {
            "avatarUrl": "",
            "id": "1",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "e",
          },
          Object {
            "avatarUrl": "",
            "id": "2",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "d",
          },
          Object {
            "avatarUrl": "",
            "id": "3",
            "interactedAt": 999,
            "interactionType": "user.comment_create",
            "isActive": false,
            "name": "c",
          },
          Object {
            "avatarUrl": "",
            "id": "4",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "b",
          },
          Object {
            "avatarUrl": "",
            "id": "5",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "a",
          },
        ]
      }
      experimentBucket="control"
    />
  </Overlay>
</Flyout>
`;

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should not render autofly on load when the experiment bucket is "control" or null 2`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <div
    className="presence-avatar-container"
    onKeyDown={[Function]}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="1"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              e
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Previewed {timeAgo}"
                id="boxui.presence.timeSinceLastPreviewed"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="1"
        isActive={false}
        name="e"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="2"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              d
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Edited {timeAgo}"
                id="boxui.presence.timeSinceLastModified"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="2"
        isActive={false}
        name="d"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="3"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              c
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Commented {timeAgo}"
                id="boxui.presence.timeSinceLastCommented"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="3"
        isActive={false}
        name="c"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <div
      className="presence-avatar avatar presence-count"
      tabIndex="0"
    >
      +2
    </div>
  </div>
  <Overlay
    className="presence-dropdown-container"
    shouldDefaultFocus={false}
  >
    <PresenceDropdown
      className="presence-dropdown"
      collaborators={
        Array [
          Object {
            "avatarUrl": "",
            "id": "1",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "e",
          },
          Object {
            "avatarUrl": "",
            "id": "2",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "d",
          },
          Object {
            "avatarUrl": "",
            "id": "3",
            "interactedAt": 999,
            "interactionType": "user.comment_create",
            "isActive": false,
            "name": "c",
          },
          Object {
            "avatarUrl": "",
            "id": "4",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "b",
          },
          Object {
            "avatarUrl": "",
            "id": "5",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "a",
          },
        ]
      }
      experimentBucket={null}
    />
  </Overlay>
</Flyout>
`;

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should not render autofly treatment when there are no collaborators to list 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <div
    className="presence-avatar-container"
    onKeyDown={[Function]}
  />
  <Overlay
    className="presence-dropdown-container presence-autofly"
    shouldDefaultFocus={false}
  >
    <PresenceDropdown
      className="presence-dropdown"
      collaborators={Array []}
      experimentBucket="flyout"
    />
    <a
      className="presence-dropdown-request-stats"
      href="#"
    >
      <FormattedMessage
        defaultMessage="See all activity"
        id="boxui.presence.previewPresenceFlyoutAccessStatsLink"
      />
    </a>
  </Overlay>
</Flyout>
`;

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should not render autofly treatment when there is no click handler to open the recents panel 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <div
    className="presence-avatar-container"
    onKeyDown={[Function]}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="1"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              e
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Previewed {timeAgo}"
                id="boxui.presence.timeSinceLastPreviewed"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="1"
        isActive={false}
        name="e"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="2"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              d
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Edited {timeAgo}"
                id="boxui.presence.timeSinceLastModified"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="2"
        isActive={false}
        name="d"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="3"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              c
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Commented {timeAgo}"
                id="boxui.presence.timeSinceLastCommented"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="3"
        isActive={false}
        name="c"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <div
      className="presence-avatar avatar presence-count"
      tabIndex="0"
    >
      +2
    </div>
  </div>
  <Overlay
    className="presence-dropdown-container presence-autofly"
    shouldDefaultFocus={false}
  >
    <PresenceDropdown
      className="presence-dropdown"
      collaborators={
        Array [
          Object {
            "avatarUrl": "",
            "id": "1",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "e",
          },
          Object {
            "avatarUrl": "",
            "id": "2",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "d",
          },
          Object {
            "avatarUrl": "",
            "id": "3",
            "interactedAt": 999,
            "interactionType": "user.comment_create",
            "isActive": false,
            "name": "c",
          },
          Object {
            "avatarUrl": "",
            "id": "4",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "b",
          },
          Object {
            "avatarUrl": "",
            "id": "5",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "a",
          },
        ]
      }
      experimentBucket="flyout"
    />
    <a
      className="presence-dropdown-request-stats"
      href="#"
    >
      <FormattedMessage
        defaultMessage="See all activity"
        id="boxui.presence.previewPresenceFlyoutAccessStatsLink"
      />
    </a>
  </Overlay>
</Flyout>
`;

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should render autofly on load when the experiment bucket is "flyout" 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={true}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <div
    className="presence-avatar-container"
    onKeyDown={[Function]}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="1"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              e
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Previewed {timeAgo}"
                id="boxui.presence.timeSinceLastPreviewed"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="1"
        isActive={false}
        name="e"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="2"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              d
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Edited {timeAgo}"
                id="boxui.presence.timeSinceLastModified"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="2"
        isActive={false}
        name="d"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      key="3"
      position="bottom-center"
      text={
        <div
          className="presence-avatar-tooltip-container"
        >
          <div>
            <span
              className="presence-avatar-tooltip-name"
            >
              c
            </span>
          </div>
          <div>
            <span
              className="presence-avatar-tooltip-event"
            >
              <FormattedMessage
                defaultMessage="Commented {timeAgo}"
                id="boxui.presence.timeSinceLastCommented"
                values={
                  Object {
                    "timeAgo": "1 second ago",
                  }
                }
              />
            </span>
          </div>
        </div>
      }
      theme="default"
    >
      <PresenceAvatar
        avatarUrl=""
        id="3"
        isActive={false}
        name="c"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </Tooltip>
    <div
      className="presence-avatar avatar presence-count"
      tabIndex="0"
    >
      +2
    </div>
  </div>
  <Overlay
    className="presence-dropdown-container presence-autofly-first-load"
    shouldDefaultFocus={false}
  >
    <FormattedMessage
      defaultMessage="Quickly see who has commented on, edited, or viewed this file."
      id="boxui.presence.previewPresenceFlyoutCopy"
    />
    <Button
      className="btn-primary"
      isLoading={false}
      onClick={[Function]}
      showRadar={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="View Recent Activity"
        id="boxui.presence.previewPresenceFlyoutActivityCTA"
      />
    </Button>
  </Overlay>
</Flyout>
`;
